test/bad/generics/def03.px

func f<T>(T x) T def
    return T

f(true)
